# docchat-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/docchat_mcp/: __init__.py  cli.py  indexer.py  library_config.py  retrieval.py  server.py
src/docchat_server/: __init__.py  cli.py  indexer.py  retrieval.py  server.py
tests/: test_smoke.py
